# Atlas-AI-PKI

./: README.md  SEED_README.md  atlas_seed_5a181764e8094253906757a336538d64.db  atlas_test2.db  coreidea.md  gemma_integration.md  pages  seed_data.py
atlas/: .gitignore  nm_base.txt  nm_common.txt  nm_ggml3.txt  nm_llama3.txt  pubspec.yaml
atlas/android/app/: build.gradle.kts
atlas/android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
atlas/assets/models/gemma/: metadata.json
atlas/lib/: app.dart  app_settings_screen.dart  main.dart
atlas/lib/core/database/: app_database.dart  app_database.g.dart  tables.dart
atlas/lib/core/models/: models.dart
atlas/lib/core/providers/: providers.dart
atlas/lib/core/services/: analytics_engine.dart  atlas_package_service.dart  decision_intelligence.dart  file_storage_service.dart  gemma_service.dart  model_installer.dart  model_loader.dart  pki_pipeline.dart  retrieval_engine.dart
atlas/lib/features/ai_chat/: ai_chat_screen.dart
atlas/lib/features/analytics/: analytics_screen.dart
atlas/lib/features/decisions/: decisions_screen.dart
atlas/lib/features/entities/: entities_screen.dart  entity_detail_screen.dart  entity_form_screen.dart
atlas/test/: widget_test.dart
llama-b10087/: ggml-rpc-server  llama  llama-batched-bench  llama-bench  llama-cli  llama-completion  llama-debug-template-parser  llama-fit-params  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-mtmd-debug  llama-perplexity  llama-quantize  llama-results  llama-template-analysis  llama-tokenize  llama-tts
(+16 files in other folders)
